fixed code overflow issue and removed commnets around navabr elements

--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,10 @@ pre {
     background-color: #f4f4f4;
     border: 1px solid #ccc;
     padding: 10px;
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
 }
 
 code {
